fix new tablist spacing/ version bump

--- a/index.less
+++ b/index.less
@@ -645,7 +645,7 @@
                         }
                     }
                     & .title{
-                        font-weight: bold;
+                        font-weight: 650;
                     }
                     & .subtitle{
                         font-size: 0.95em;
@@ -813,9 +813,11 @@
         }
 
         // Style new Settings Page UIKit
-        ul[role="tablist"] {
+        .settings-page ul[role="tablist"] {
             margin-top      : 40px;
             margin-bottom   : 40px;
+        }
+        ul[role="tablist"] {
             border-radius   : 25px;
             background-color: var(--UIKitBlack);
 
@@ -946,9 +948,11 @@
     }
 
     // Style new Settings Page UIKit
-    ul[role="tablist"] {
+    .settings-page ul[role="tablist"] {
         margin-top      : 40px;
         margin-bottom   : 40px;
+    }
+    ul[role="tablist"] {
         border-radius   : 25px;
         background-color: var(--UIKitBlack);
 
